[tool.poetry]
name = "jellycord"
version = "0.1.0"
description = "Discord rich presence for Jellyfin"
authors = ["Ojas Kataria <ojasrockstar2006@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jellyfin-apiclient-python = "^1.8.1"
pypresence = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
